--- a/src/app/connect/static-properties/static-number-input/static-number-input.component.html
+++ b/src/app/connect/static-properties/static-number-input/static-number-input.component.html
@@ -4,7 +4,7 @@
         <mat-form-field>
             <input class="example-full-width" matInput id="{{ 'input-' + staticProperty.label.toLowerCase() }}" [placeholder]="staticProperty.label" [(ngModel)]="staticPropertyUtil.asFreeTextStaticProperty(staticProperty).value"
                 formControlName="freeStaticTextNumber" (ngModelChange)="valueChange(staticPropertyUtil.asFreeTextStaticProperty(staticProperty).value)"
-                required>
+                required (blur)="emitUpdate()">
 
             <mat-error *ngIf="!hasInput">
                 {{errorMessage}}
