--- a/src/app/info/about/about.component.html
+++ b/src/app/info/about/about.component.html
@@ -106,7 +106,7 @@
                             <div fxFlex="95" fxLayoutAlign="start center">
                                 <h5>If you like
                                     StreamPipes, give us a star at <a
-                                            href="https://github.com/streampipes-ce">Github</a>
+                                            href="https://github.com/streampipes/streampipes-ce">Github</a>
                                 </h5>
                             </div>
                         </div>
