--- a/src/assets/templates/navbar.html
+++ b/src/assets/templates/navbar.html
@@ -1,23 +1,18 @@
 <md-toolbar class="md-primary md-hue-2 top-nav">
-    <div class="md-toolbar-tools">
-        <div flex="40" layout layout-align="start center">
+    <div class="md-toolbar-tools" style="height:50px;max-height:50px;">
+        <div flex="60" layout layout-align="start center">
             <md-button class="md-icon-button" aria-label="Settings" ng-click="toolbarCtrl.toggleLeft()" ng-show="toolbarCtrl.authenticated">
             <i class="material-icons md-36">menu</i>
             </md-button>
-            <h1 class="md-toolbar-tools">
+            <h1 class="md-toolbar-tools" style="height:50px;max-height:50px;">
                 <div class="sp-darkblue"
                      style="align-items: left;padding:5px;border-radius:0px;margin-right:15px;position:relative;left:20px;"><img
                         alt="icon" src="assets/img/sp/sp-logo-right-white.png" style="height:28px;">
                 </div>
-                <div class="sp-darkblue"
-                     style="color:white;padding: 5px 5px;font-size:15px">
+                <div style="color:white;padding: 5px 5px;font-size:15px;margin-left:10px;">
+                    <h4 style="margin-top:18px;font-size:12pt;font-weight:bold;">{{toolbarCtrl.getActivePage()}}</h4>
                 </div>
             </h1>
-        </div>
-        <div flex="20" layout="row" layout-align="center end" class="current-nav-page-box sp-darkblue-text">
-            <div class="current-nav-page-content">
-                <h4 style="margin-top:-10px;">{{toolbarCtrl.getActivePage()}}</h4>
-            </div>
         </div>
         <span flex></span>
         <div flex="40" layout layout-align="end center" ng-show="toolbarCtrl.authenticated">
