--- a/src/scss/sp/main.scss
+++ b/src/scss/sp/main.scss
@@ -311,6 +311,8 @@ md-content {
   color: inherit;
   text-decoration: none;
   margin: 0 -7px;
+  top: -10px;
+  height:40px;
 }
 
 .current-nav-page-content::before {
@@ -324,9 +326,9 @@ md-content {
   border-radius: 10px 10px 0 0;
   background: #fff;
   box-shadow: 0 2px #fff inset;
-  transform: perspective(4px) rotateX(1deg);
+  transform: perspective(4px) rotateX(-1deg);
   transform-origin: bottom;
-  height: calc(100% - 20px);
+  //height: calc(100% - 20px);
   border: 0px solid $sp-color-accent;
   border-bottom: .1em none #fff;
 }
