--- a/src/app/connect/static-properties/static-property.component.html
+++ b/src/app/connect/static-properties/static-property.component.html
@@ -11,6 +11,10 @@
     (updateEmitter)="emitUpdate($event)" (inputEmitter)="valueChange($event)" [staticProperty]="staticProperty">
 </app-static-text-input>
 
+<app-static-secret-input *ngIf="isSecretStaticProperty(staticProperty) && staticPropertyUtil.asFreeTextStaticProperty(staticProperty).render"
+                       (updateEmitter)="emitUpdate($event)" (inputEmitter)="valueChange($event)" [staticProperty]="staticProperty">
+</app-static-secret-input>
+
 <app-static-free-input *ngIf="isFreeTextStaticProperty(staticProperty) && staticPropertyUtil.asFreeTextStaticProperty(staticProperty).render && (staticPropertyUtil.asFreeTextStaticProperty (staticProperty).requiredDomainProperty == '' || !staticPropertyUtil.asFreeTextStaticProperty (staticProperty).requiredDomainProperty) "
     (inputEmitter)="valueChange($event)" (updateEmitter)="emitUpdate($event)" [staticProperty]="staticProperty">
 </app-static-free-input>
