--- a/src/app/app-container/app-container.component.css
+++ b/src/app/app-container/app-container.component.css
@@ -1,5 +1,7 @@
-.app-link {
-    margin-left: 10px;
-    margin-right: 10px;
-    cursor: pointer;
+mat-card {
+    box-shadow: 0 2px 1px -1px rgba(0,0,0,.2), 0 1px 1px 0 rgba(0,0,0,.14), 0 1px 3px 0 rgba(0,0,0,.12);
+    margin: 10px;
+}
+.page-container-padding-inner {
+    margin: 10px;
 }
