ce#219 - update file rest endpoints

--- a/src/app/connect/static-properties/static-property.component.html
+++ b/src/app/connect/static-properties/static-property.component.html
@@ -20,7 +20,7 @@
 </app-static-free-input>
 
 <app-static-file-input *ngIf="isFileStaticProperty(staticProperty)"
-    (inputEmitter)="valueChange($event)" [staticProperty]="staticProperty">
+    (inputEmitter)="valueChange($event)" [staticProperty]="staticProperty" [adapterId]="adapterId">
 </app-static-file-input>
 
 <app-static-runtime-resolvable-any-input *ngIf="isRuntimeResolvableAnyStaticProperty(staticProperty)"
