streampipes/ce#222: Support multiple dashboards per pipeline

--- a/src/app/dashboard/add-widget-template.html
+++ b/src/app/dashboard/add-widget-template.html
@@ -32,6 +32,7 @@
                                      ng-click="ctrl.selectPipeline(opt.doc)">
                                     {{ctrl.iconText(opt.doc.name)}}
                                     <h5>{{opt.doc.name}}</h5>
+                                    <h5>{{opt.doc.visualizationName}}</h5>
                                 </div>
                             </md-grid-tile>
                         </md-grid-list>
