Use filter element for getting started tutorial, add minor ux improvements

--- a/src/app/editor/components/pipeline-assembly/pipeline-assembly.tmpl.html
+++ b/src/app/editor/components/pipeline-assembly/pipeline-assembly.tmpl.html
@@ -4,7 +4,7 @@
             <md-button ng-disabled="!ctrl.PipelineValidationService.isValidPipeline(ctrl.rawPipelineModel)"
                        class="md-icon-button" ng-click="ctrl.submit()" type="submit">
                 <md-tooltip md-direction="top">
-                    Submit Pipeline
+                    Save Pipeline
                 </md-tooltip>
                 <i class="material-icons">save</i>
             </md-button>
