--- a/src/app/editor/dialog/save-pipeline/submitPipelineModal.tmpl.html
+++ b/src/app/editor/dialog/save-pipeline/submitPipelineModal.tmpl.html
@@ -3,7 +3,7 @@
         <div class="md-toolbar-tools">
             <h2>Save Pipeline</h2>
             <span flex></span>
-            <md-button class="md-icon-button" ng-click="ctrl.cancel()">
+            <md-button class="md-icon-button" ng-click="ctrl.hide()">
                 <md-icon md-svg-icon="navigation:ic_close_24px" aria-label="Close dialog"></md-icon>
             </md-button>
         </div>
