--- a/src/app/editor/dialog/customize-pipeline-element/customizeElementDialog.tmpl.html
+++ b/src/app/editor/dialog/customize-pipeline-element/customizeElementDialog.tmpl.html
@@ -103,7 +103,7 @@
                 <sp-button sp-button-gray ng-click="ctrl.cancel()">
                     Close
                 </sp-button>
-                <sp-button sp-button-blue ng-disabled="ctrl.customizeForm.$invalid" type="submit"
+                <sp-button id="save-customize-button" sp-button-blue ng-disabled="ctrl.customizeForm.$invalid" type="submit"
                            ng-click="ctrl.saveProperties()">
                     Save
                 </sp-button>
