--- a/src/app/editor/components/oneof-remote/oneof-remote.tmpl.html
+++ b/src/app/editor/components/oneof-remote/oneof-remote.tmpl.html
@@ -3,15 +3,15 @@
 </div>
 <div ng-if="!ctrl.loading">
     <div flex="100" layout="column" layout-align="center start" ng-if="ctrl.showOptions">
-        <md-button class="md-icon-button" ng-disabled="ctrl.selectMode" ng-click="ctrl.loadOptionsFromRestApi()">
-            <i class="material-icons">refresh</i>
+        <sp-button sp-button-blue sp-button-small-padding ng-click="ctrl.loadOptionsFromRestApi()">
+            <i class="material-icons" style="font-size:18px;">refresh</i>
             <md-tooltip md-direction="top">
                 Reload
             </md-tooltip>
-        </md-button>
+            Reload</sp-button>&nbsp;&nbsp;
     </div>
     <md-input-container flex="100" layout="column">
-        <md-radio-group ng-if="ctrl.showOptions" class="md-accent" ng-model="ctrl.staticProperty.properties.currentSelection">
+        <md-radio-group ng-if="ctrl.showOptions" class="md-accent" ng-model="ctrl.staticProperty.properties.currentSelection" ng-change="ctrl.toggle()">
             <md-radio-button ng-repeat="option in ctrl.staticProperty.properties.options" ng-value="option">
                 <b>{{option.name}}</b><br/>
             </md-radio-button>
