--- a/src/app/pipelines/components/pipeline-details/pipeline-details.tmpl.html
+++ b/src/app/pipelines/components/pipeline-details/pipeline-details.tmpl.html
@@ -47,7 +47,7 @@
             </sp-button>
         </span>
                 <span flex flex-order="2" layout="row" layout-align="center center">
-            <sp-button sp-button-icon ng-click="ctrl.PipelineOperationsService.modifyPipeline(pipeline._id)" class="md-icon-button">
+            <sp-button ng-disabled="pipeline.running" sp-button-icon ng-click="ctrl.PipelineOperationsService.modifyPipeline(pipeline._id)" class="md-icon-button">
                <i class="material-icons">mode_edit</i>
                 <md-tooltip md-direction="top">
                 Modify Pipeline
@@ -57,7 +57,7 @@
                 <span flex flex-order="4" layout="row" layout-align="center center">
             <sp-button sp-button-icon
                     ng-click="ctrl.PipelineOperationsService.showDeleteDialog(pipeline, ctrl.refreshPipelines)"
-                    ng-disabled="ctrl.pipeline.running" class="md-icon-button"><i class="material-icons">delete</i>
+                    class="md-icon-button"><i class="material-icons">delete</i>
                 <md-tooltip md-direction="top">
                 Delete Pipeline
             </md-tooltip>
