--- a/src/app/connect/schema-editor/event-property-nested/event-property-nested.component.html
+++ b/src/app/connect/schema-editor/event-property-nested/event-property-nested.component.html
@@ -1,15 +1,15 @@
 <!-- Liste von EventProperties -->
 <div class="header" fxLayout="row" fxLayoutAlign="start center">
-    <div class="onhover"  fxLayout="row" fxFlex="100">
+    <div class="onhover" fxLayout="row" fxFlex="100">
         <div fxFlex="80" fxLayoutAlign="start">
             <b>
                 {{getLabel()}}
             </b>
         </div>
         <div fxFlex="20" fxLayoutAlign="end">
-                <button [disabled]="!isEditable" mat-button (click)=OnClickDeleteProperty()>
-                        <mat-icon>delete</mat-icon>
-                    </button>
+            <button [disabled]="!isEditable" color="primary" mat-button (click)=emitAddNestedProperty()>
+                <mat-icon matTooltip="Add a Nested Property">queue</mat-icon>
+            </button>
             <button mat-button (click)=onClickOpen()>
                 <div *ngIf=open>
                     <mat-icon>expand_less</mat-icon>
@@ -24,8 +24,8 @@
 <!-- body start -->
 <div class="body">
     <div [hidden]=!open>
-        <app-event-property [domainPropertyGuess]="domainPropertyGuess"
-                            [property]="eventPropertyNested"></app-event-property>
+        <app-event-property [domainPropertyGuess]="domainPropertyGuess" [property]="eventPropertyNested">
+        </app-event-property>
     </div>
 
     <!--
