--- a/src/app/connect/schema-editor/event-property-primitive/event-property-primitive.component.html
+++ b/src/app/connect/schema-editor/event-property-primitive/event-property-primitive.component.html
@@ -1,15 +1,13 @@
 <div class="header" fxLayout="row" fxLayoutAlign="start center">
-    <div  class="onhover" fxLayout="row" fxFlex="100">
+    <div class="onhover" fxLayout="row" fxFlex="100">
         <div fxLayoutAlign="start" fxFlex="80">
             <b>
                 {{getLabel()}}
             </b>
-            <mat-icon *ngIf="property.isTimestampProperty()" style="font-size: 15px; padding: 4px;">access_time</mat-icon>
+            <mat-icon *ngIf="property.isTimestampProperty()" style="font-size: 15px; padding: 4px;">access_time
+            </mat-icon>
         </div>
         <div fxFlex="20" fxLayoutAlign="end">
-            <button [disabled]="!isEditable" mat-button (click)=OnClickDeleteProperty()>
-                <mat-icon>delete</mat-icon>
-            </button>
             <button mat-button (click)=OnClickOpen()>
                 <div *ngIf=open>
                     <mat-icon>expand_less</mat-icon>
@@ -26,7 +24,8 @@
 
 
     <mat-form-field class="doubleWidth">
-        <mat-select placeholder="Runtime Type" [(ngModel)]="property.runtimeType" [disabled]="property.isTimestampProperty()">
+        <mat-select placeholder="Runtime Type" [(ngModel)]="property.runtimeType"
+            [disabled]="property.isTimestampProperty()">
             <mat-option *ngFor="let dataType of runtimeDataTypes" [value]="dataType.url">
                 {{ dataType.label }}
             </mat-option>
@@ -51,8 +50,9 @@
 
     <div fxLayout="row" fxLayoutAlign="start" *ngIf="!property.isTimestampProperty()">
         <div class="form-group" fxFlexAlign="center" style="width: 155px">
-            <mat-form-field   *ngIf="!hadMesarumentUnit" class="example-full-width" style="width: 155px">
-                <input matInput placeholder="Unit" [formControl]="stateCtrl" [attr.disabled]="transformUnitEnable ? '' : null">
+            <mat-form-field *ngIf="!hadMesarumentUnit" class="example-full-width" style="width: 155px">
+                <input matInput placeholder="Unit" [formControl]="stateCtrl"
+                    [attr.disabled]="transformUnitEnable ? '' : null">
                 <!--
                 <mat-autocomplete #auto="matAutocomplete" [displayWith]="displayFn">
                     <mat-option *ngFor="let unit of filteredUnits | async" [value]="unit.label">
@@ -66,13 +66,15 @@
             </mat-form-field>
 
         </div>
-             <button mat-button [disabled]="!isEditable" (click)="transformUnit()" color="primary"  class="form-group" fxFlexAlign="center" style="min-width: 60px; max-width: 60px">
-                <mat-icon *ngIf="!transformUnitEnable">arrow_forward</mat-icon>
-                <mat-icon *ngIf="transformUnitEnable" style="transform: rotate(180deg)">arrow_forward</mat-icon>
-             </button>
+        <button mat-button [disabled]="!isEditable" (click)="transformUnit()" color="primary" class="form-group"
+            fxFlexAlign="center" style="min-width: 60px; max-width: 60px">
+            <mat-icon *ngIf="!transformUnitEnable">arrow_forward</mat-icon>
+            <mat-icon *ngIf="transformUnitEnable" style="transform: rotate(180deg)">arrow_forward</mat-icon>
+        </button>
         <mat-form-field class="example-full-width" style="width: 155px" *ngIf="transformUnitEnable">
             <mat-select [disabled]="!isEditable" placeholder="New Unit" [(value)]="selectUnit">
-                <mat-option *ngFor="let unit of possibleUnitTransformations" [value]="unit" (click)="changeTargetUnit(unit)">
+                <mat-option *ngFor="let unit of possibleUnitTransformations" [value]="unit"
+                    (click)="changeTargetUnit(unit)">
                     {{unit.label}}
                 </mat-option>
             </mat-select>
@@ -80,29 +82,32 @@
     </div>
 
     <div fxLayout="row" fxLayoutAlign="start" *ngIf="property.isTimestampProperty()">
-        <div  class="form-group" fxFlexAlign="center">
-            <mat-form-field
-                    [class.example-full-width]="property.timestampTransformationMode !== undefined " style="margin-right: 10px"
-                    [class.doubleWidth]="property.timestampTransformationMode === undefined"
-                    [class.aThirdWidth]="selectedTimeMultiplier === 'custom' && property.timestampTransformationMode === 'timeUnit'" >
-                <mat-select placeholder="Timestamp converter (unix timestamp)"  [(value)]="property.timestampTransformationMode">
+        <div class="form-group" fxFlexAlign="center">
+            <mat-form-field [class.example-full-width]="property.timestampTransformationMode !== undefined "
+                style="margin-right: 10px" [class.doubleWidth]="property.timestampTransformationMode === undefined"
+                [class.aThirdWidth]="selectedTimeMultiplier === 'custom' && property.timestampTransformationMode === 'timeUnit'">
+                <mat-select placeholder="Timestamp converter (unix timestamp)"
+                    [(value)]="property.timestampTransformationMode">
                     <mat-option>None</mat-option>
                     <mat-option value="formatString">Date String</mat-option>
                     <mat-option value="timeUnit">Date Number</mat-option>
                 </mat-select>
             </mat-form-field>
         </div>
-        <div  class="form-group" fxFlexAlign="center">
+        <div class="form-group" fxFlexAlign="center">
             <mat-form-field *ngIf="property.timestampTransformationMode === 'formatString'">
-                <input matInput placeholder="E.g. yyyy-MM-dd HH:mm:ss.SSSZ" [(ngModel)]="property.timestampTransformationFormatString">
+                <input matInput placeholder="E.g. yyyy-MM-dd HH:mm:ss.SSSZ"
+                    [(ngModel)]="property.timestampTransformationFormatString">
             </mat-form-field>
-            <mat-form-field  *ngIf="property.timestampTransformationMode === 'timeUnit'"
-                    [class.example-full-width]="selectedTimeMultiplier !== 'custom'"
-                    [class.aThirdWidth]="selectedTimeMultiplier === 'custom'" >
+            <mat-form-field *ngIf="property.timestampTransformationMode === 'timeUnit'"
+                [class.example-full-width]="selectedTimeMultiplier !== 'custom'"
+                [class.aThirdWidth]="selectedTimeMultiplier === 'custom'">
                 <mat-select placeholder="Current time unit" [(value)]="selectedTimeMultiplier">
-                   <mat-option value="milliseconds"  (click)="property.timestampTransformationMultiplier = 0">Milliseconds</mat-option>
-                   <mat-option value="second"  (click)="property.timestampTransformationMultiplier = 1000">Seconds</mat-option>
-             <!-- More transformation Options, there is any use case for them?
+                    <mat-option value="milliseconds" (click)="property.timestampTransformationMultiplier = 0">
+                        Milliseconds</mat-option>
+                    <mat-option value="second" (click)="property.timestampTransformationMultiplier = 1000">Seconds
+                    </mat-option>
+                    <!-- More transformation Options, there is any use case for them?
                     <mat-option value="minutes" (click)="property.timestampTransformationMultiplier = 60000">Minutes</mat-option>
                     <mat-option value="hours"   (click)="property.timestampTransformationMultiplier = 3600000">Hours</mat-option>
                     <mat-option value="days"    (click)="property.timestampTransformationMultiplier = 86400000">Days</mat-option>
@@ -119,9 +124,8 @@
     </div>
 
     <mat-form-field *ngIf="staticValueAddedByUser()" class="doubleWidth">
-        <input matInput placeholder="Static Value" name="static_value" id="static_value" [(ngModel)]="property.staticValue">
+        <input matInput placeholder="Static Value" name="static_value" id="static_value"
+            [(ngModel)]="property.staticValue">
     </mat-form-field>
 
 </div>
-
-
