--- a/src/app/connect/schema-editor/event-schema/event-schema.component.html
+++ b/src/app/connect/schema-editor/event-schema/event-schema.component.html
@@ -1,10 +1,26 @@
-<div id="schema_reload_button" fxLayout="row wrap" fxLayoutAlign="end start">
-    <button color="primary" mat-button (click)=guessSchema()>
-        <i class="material-icons">
-            refresh
-        </i>
-        <!--<span style="font-weight: bold;" > Guess Schema </span>-->
-    </button>
+<div fxLayout="row">
+    <div fxLayoutAlign="center center" class="addSchema">
+        <button color="primary" mat-button>
+            <mat-icon matTooltip="Remove selected Properties">delete</mat-icon>
+        </button>
+        <button [disabled]="!isEditable" color="primary" mat-button (click)=addNestedProperty()>
+            <mat-icon matTooltip="Add a Nested Property">queue</mat-icon>
+        </button>
+        <button [disabled]="!isEditable" *ngIf="!eventPropertyNested" color="primary" mat-button
+            (click)="addStaticValueProperty()">
+            <mat-icon matTooltip="Add a static value to event">add</mat-icon>
+        </button>
+        <button [disabled]="!isEditable" *ngIf="!eventPropertyNested" color="primary" mat-button
+            (click)=addTimestampProperty()>
+            <mat-icon matTooltip="Add timestamp to event schema">access_time</mat-icon>
+        </button>
+        <button color="primary" mat-button (click)=guessSchema()>
+            <mat-icon matTooltip="Refresh Schema">refresh</mat-icon>
+        </button>
+        <button color="primary" mat-button (click)=showPreview()>
+            <mat-icon matTooltip="Show preview of schema">play_arrow</mat-icon>
+        </button>
+    </div>
 </div>
 
 <div fxLayout="column" *ngIf="isLoading">
@@ -39,24 +55,15 @@
 </div>
 
 <div fxLayout="row">
-    <div fxFlex fxLayout="column" fxLayoutAlign="space-evenly stretched" class="drag-drop-tree">
-        <!--
-        <app-event-property-bag [(eventProperties)]="eventSchema.eventProperties" [domainPropertyGuesses]="schemaGuess.eventProperties" [isEditable]="isEditable">
-        </app-event-property-bag>
-        <cdk-tree #treeSelector [dataSource]="datasource" [treeControl]="treeControl" cdkDropList (cdkDropListDropped)="drop($event)">
-            <cdk-tree-node style="display: flex" *cdkTreeNodeDef="let node;" cdkTreeNodePadding cdkDrag [cdkDragData]="node">
-                {{node.runTimeName}} 
-            </cdk-tree-node>
-        </cdk-tree>
-        -->
-
+    <div fxFlex="0 1 100%" fxLayout="column" fxLayoutAlign="space-evenly stretched" class="drag-drop-tree">
         <tree-root #tree [nodes]="nodes" [options]="options" (updateData)="onUpdateData(tree, $event)">
             <ng-template #treeNodeTemplate let-node let-index="index">
                 <div class="schema" *ngIf="isEventPropertyNested(node.data)">
                     <app-event-property-nested [index]="i + 1" [eventPropertyNested]="node.data"
                         [domainPropertyGuess]="getDomainProbability(node.data.runTimeName)"
                         [domainPropertyGuesses]="domainPropertyGuesses" [isEditable]="isEditable"
-                        (delete)=deletePropertyNested($event)></app-event-property-nested>
+                        (addNestedProperty)="addNestedProperty(node.data)" (delete)=deletePropertyNested($event)>
+                    </app-event-property-nested>
                 </div>
                 <div *ngIf="isEventPropertyPrimitive(node.data)">
                     <app-event-property-primitive (delete)=deletePropertyPrimitive($event)
@@ -70,28 +77,10 @@
                         [property]="node.data">
                     </app-event-property-list>
                 </div>
-                <div fxLayoutAlign="center center" class="addSchema" *ngIf="isNested(node.data)">
-                    <button [disabled]="!isEditable" color="primary" mat-button (click)=addNestedProperty(node.data)>
-                        <mat-icon matTooltip="Add a Nested Property">queue</mat-icon>
-                    </button>
-                </div>
             </ng-template>
         </tree-root>
-        <div fxLayoutAlign="center center" class="addSchema">
-            <button [disabled]="!isEditable" color="primary" mat-button (click)=addNestedProperty()>
-                <mat-icon matTooltip="Add a Nested Property">queue</mat-icon>
-            </button>
-            <button [disabled]="!isEditable" *ngIf="!eventPropertyNested" color="primary" mat-button
-                (click)="addStaticValueProperty()">
-                <mat-icon matTooltip="Add a static value to event">add</mat-icon>
-            </button>
-            <button [disabled]="!isEditable" *ngIf="!eventPropertyNested" color="primary" mat-button
-                (click)=addTimestampProperty()>
-                <mat-icon matTooltip="Add timestamp to event schema">access_time</mat-icon>
-            </button>
-        </div>
     </div>
-    <div fxFlex class="schema-preview">
-        <pre>{{ eventSchema | json }}</pre>
+    <div fxFlex="0 0 50%" class="schema-preview" *ngIf="isPreviewEnabled">
+        <app-event-schema-preview [eventSchema]="eventSchema"></app-event-schema-preview>
     </div>
 </div>
