--- a/src/app/connect/schema-editor/event-property/event-property.component.html
+++ b/src/app/connect/schema-editor/event-property/event-property.component.html
@@ -1,32 +1,35 @@
 <form #propertyForm="ngForm">
   <div fxLayout="row" fxLayoutAlign="start">
-    <div  class="form-group" fxFlexAlign="center">
+    <div class="form-group" fxFlexAlign="center">
       <mat-form-field class="example-full-width" style="margin-right: 10px">
-        <input matInput placeholder="Label"  name="label" id="label" [(ngModel)]="property.label" >
+        <input matInput placeholder="Label" name="label" id="label" [(ngModel)]="property.label">
       </mat-form-field>
     </div>
     <div attr.id="input-runtime-name-{{property.label}}" class="form-group" fxFlexAlign="center">
       <mat-form-field class="example-full-width">
-        <input matInput placeholder="RuntimeName" name="runtimename" id="runtimename" [(ngModel)]="property.runTimeName">
+        <input matInput placeholder="RuntimeName" name="runtimename" id="runtimename"
+          [(ngModel)]="property.runTimeName">
       </mat-form-field>
     </div>
   </div>
 
   <div class="form-group">
-    <mat-form-field class="doubleWidth" >
-      <input matInput placeholder="Domain Property" class="dmainProperty" name="domainproperty" id="domainproperty" [(ngModel)]="property.domainProperty">
+    <mat-form-field class="doubleWidth">
+      <input matInput placeholder="Domain Property" class="dmainProperty" name="domainproperty" id="domainproperty"
+        [(ngModel)]="property.domainProperty">
     </mat-form-field>
     <!--<mat-autocomplete #auto="matAutocomplete">-->
-      <!--<mat-option *ngFor="let propertyGuess of domainPropertyGuess.list" [value]="propertyGuess.domainProperty">-->
-        <!--{{ propertyGuess.domainProperty + propertyGuess.probability}}-->
-      <!--</mat-option>-->
+    <!--<mat-option *ngFor="let propertyGuess of domainPropertyGuess.list" [value]="propertyGuess.domainProperty">-->
+    <!--{{ propertyGuess.domainProperty + propertyGuess.probability}}-->
+    <!--</mat-option>-->
     <!--</mat-autocomplete>-->
   </div>
 
   <div class="form-group">
-    <mat-form-field class="doubleWidth" >
+    <mat-form-field class="doubleWidth">
       <!-- <input matInput placeholder="Description"  name="description" id="description" [(ngModel)]="property.description"> -->
-      <textarea matInput name="description" placeholder="Description"  id="description" [(ngModel)]="property.description" cols="20" rows="2"></textarea>
+      <textarea matInput name="description" placeholder="Description" id="description"
+        [(ngModel)]="property.description" cols="20" rows="2"></textarea>
 
     </mat-form-field>
   </div>
