Overwrite global css

--- a/src/app/connect/schema-editor/event-schema/event-schema.component.css
+++ b/src/app/connect/schema-editor/event-schema/event-schema.component.css
@@ -83,5 +83,5 @@ ul {
 }
 
 :host /deep/ .node-content-wrapper-focused, .node-content-wrapper:hover, .node-content-wrapper-active, .node-content-wrapper.node-content-wrapper-active:hover, .node-content-wrapper-active.node-content-wrapper-focused {
-  background: none;
+  background: none !important;
 }
