--- a/src/app/connect/static-properties/static-alternatives/static-alternatives.component.css
+++ b/src/app/connect/static-properties/static-alternatives/static-alternatives.component.css
@@ -38,3 +38,11 @@ form {
 ::ng-deep .mat-radio-button.mat-accent .mat-radio-inner-circle {
     background-color: rgb(27, 20, 100);
 }
+
+::ng-deep .mat-checkbox-checked.mat-accent .mat-checkbox-background, .mat-checkbox-indeterminate.mat-accent .mat-checkbox-background {
+    background-color: rgb(27, 20, 100) !important;
+}
+
+::ng-deep .mat-checkbox:not(.mat-checkbox-disabled).mat-accent .mat-checkbox-ripple .mat-ripple-element {
+    background-color: rgb(27, 20, 100) !important;
+}
