--- a/src/app/connect/schema-editor/event-schema/event-schema.component.html
+++ b/src/app/connect/schema-editor/event-schema/event-schema.component.html
@@ -1,26 +1,31 @@
 <div fxLayout="row">
-    <div fxLayoutAlign="center center" class="addSchema">
-        <button color="primary" mat-button (click)="removeSelectedProperties()">
-            <mat-icon matTooltip="Remove selected Properties">delete</mat-icon>
-        </button>
-        <button [disabled]="!isEditable" color="primary" mat-button (click)=addNestedProperty()>
-            <mat-icon matTooltip="Add a Nested Property">queue</mat-icon>
-        </button>
-        <button [disabled]="!isEditable" *ngIf="!eventPropertyNested" color="primary" mat-button
-            (click)="addStaticValueProperty()">
-            <mat-icon matTooltip="Add a static value to event">add</mat-icon>
-        </button>
-        <button [disabled]="!isEditable" *ngIf="!eventPropertyNested" color="primary" mat-button
-            (click)=addTimestampProperty()>
-            <mat-icon matTooltip="Add timestamp to event schema">access_time</mat-icon>
-        </button>
-        <button color="primary" mat-button (click)=guessSchema()>
-            <mat-icon matTooltip="Refresh Schema">refresh</mat-icon>
-        </button>
-        <button color="primary" mat-button (click)=showPreview()>
-            <mat-icon matTooltip="Show preview of schema">play_arrow</mat-icon>
-        </button>
+    <div fxLayoutAlign="space-between center" class="addSchema" fxFlex="0 1 100%">
+        <div>
+            <button [disabled]="!isEditable" color="primary" mat-button (click)=addNestedProperty()>
+                <mat-icon matTooltip="Add a Nested Property">queue</mat-icon>
+            </button>
+            <button [disabled]="!isEditable" *ngIf="!eventPropertyNested" color="primary" mat-button
+                (click)="addStaticValueProperty()">
+                <mat-icon matTooltip="Add a static value to event">add</mat-icon>
+            </button>
+            <button [disabled]="!isEditable" *ngIf="!eventPropertyNested" color="primary" mat-button
+                (click)=addTimestampProperty()>
+                <mat-icon matTooltip="Add timestamp to event schema">access_time</mat-icon>
+            </button>
+            <button color="primary" mat-button (click)=guessSchema()>
+                <mat-icon matTooltip="Refresh Schema">refresh</mat-icon>
+            </button>
+            <button color="primary" mat-button (click)=showPreview()>
+                <mat-icon matTooltip="Show preview of schema">play_arrow</mat-icon>
+            </button>
+        </div>
+        <div>
+            <button style="padding-right:0" color="primary" mat-button (click)="removeSelectedProperties()">
+                <mat-icon matTooltip="Remove selected Properties">delete</mat-icon>
+            </button>
+        </div>
     </div>
+    <div fxFlex="0 0 50%" class="schema-preview" *ngIf="isPreviewEnabled"></div>
 </div>
 
 <div fxLayout="column" *ngIf="isLoading">
