Highlight selected properties and dimension properties

--- a/src/app/connect/schema-editor/event-schema/event-schema.component.css
+++ b/src/app/connect/schema-editor/event-schema/event-schema.component.css
@@ -106,3 +106,11 @@ ul {
 :host /deep/ .node-content-wrapper:hover mat-checkbox {
   opacity: 1;
 }
+
+.checkbox-selected {
+  opacity: 1 !important;
+}
+.dimension-property {
+  color: #ffa23b !important;
+  opacity: 1 !important;
+}
