Fix streampipes/ce#232: Add dummy id to customize dialog

--- a/src/app/editor/dialog/customize-pipeline-element/customizeElementDialog.tmpl.html
+++ b/src/app/editor/dialog/customize-pipeline-element/customizeElementDialog.tmpl.html
@@ -107,6 +107,7 @@
                            ng-click="ctrl.saveProperties()">
                     Save
                 </sp-button>
+                <div id="tutorial-placeholder"></div>
             </md-dialog-actions>
         </md-dialog>
     </div>
